# OpenCVDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/mark/opencvdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/opencv2/: opencv.hpp
app/src/main/java/com/mark/opencvdemo/: FaceDetection.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/mark/opencvdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
